--- a/calculator.scss
+++ b/calculator.scss
@@ -3,6 +3,7 @@
 '.' = For class
 '#' = For id
 */
+
 * {
   padding: 0;
   margin: 0;
@@ -40,13 +41,44 @@ body {
   box-shadow: 0 0 30px black;
 }
 
+
 /*  ----------------------------------------------------------------------------------------------------------------------------------------  */
 .wrapper {
   text-align: center;
 }
 
 /* Mixins */
+
+@mixin crater($top, $left, $size) {
+  content: '';
+  position: absolute;
+  top: $top;
+  left: $left;
+  width: $size;
+  height: $size;
+  background-color: #EFEEDA;
+  border-radius: 100%;
+  border: 4px solid #DEE1C5;
+}
+
+@mixin cloudBubble($top, $right, $width, $height, $deg) {
+  content: '';
+  display: block;
+  position: relative;
+  top: $top;
+  right: $right;
+  width: $width;
+  height: $height;
+  border: 8px solid #D4D4D2;
+  border-radius: 100%;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+  transform: rotateZ($deg);
+  background-color: #fff;
+}
+
 /*  Day State */
+
 .toggle {
   position: relative;
   display: inline-block;
@@ -59,7 +91,7 @@ body {
 
 .toggle:before,
 .toggle:after {
-  content: "";
+  content: '';
   display: table;
 }
 
@@ -76,7 +108,7 @@ body {
   background-color: #C0E6F6;
   border-radius: 20px;
   border: 5px solid #81C0D5;
-  transition: all 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: all .1s cubic-bezier(0.250, 0.460, 0.450, 0.940);
 }
 
 .toggle-input {
@@ -99,7 +131,7 @@ body {
   background-color: #F5EB42;
   border: 4px solid #E4C74D;
   border-radius: 50%;
-  transition: all 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: all .1s cubic-bezier(0.250, 0.460, 0.450, 0.940);
 }
 
 .toggle-switch-figure {
@@ -113,101 +145,67 @@ body {
   border-radius: 20px;
   background-color: #fff;
   transform: scale(0.4);
-  transition: all 0.12s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-.toggle-switch-figure:after {
-  content: "";
-  display: block;
-  position: relative;
-  top: -65px;
-  right: -42px;
-  width: 15px;
-  height: 15px;
-  border: 8px solid #D4D4D2;
-  border-radius: 100%;
-  border-right-color: transparent;
-  border-bottom-color: transparent;
-  transform: rotateZ(70deg);
-  background-color: #fff;
-}
-.toggle-switch-figure:before {
-  content: "";
-  display: block;
-  position: relative;
-  top: -25px;
-  right: -10px;
-  width: 30px;
-  height: 30px;
-  border: 8px solid #D4D4D2;
-  border-radius: 100%;
-  border-right-color: transparent;
-  border-bottom-color: transparent;
-  transform: rotateZ(30deg);
-  background-color: #fff;
+  transition: all .12s cubic-bezier(0.250, 0.460, 0.450, 0.940);
+
+  &:after {
+    @include cloudBubble(-65px, -42px, 15px, 15px, 70deg);
+  }
+
+  &:before {
+    @include cloudBubble(-25px, -10px, 30px, 30px, 30deg);
+  }
 }
 
 .toggle-switch-figureAlt {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: 2px;
-  width: 2px;
-  height: 2px;
-  background-color: #EFEEDA;
-  border-radius: 100%;
-  border: 4px solid #DEE1C5;
-  box-shadow: 42px -7px 0 -3px #FCFCFC, 75px -10px 0 -3px #FCFCFC, 54px 4px 0 -4px #FCFCFC, 83px 7px 0 -2px #FCFCFC, 63px 18px 0 -4px #FCFCFC, 44px 28px 0 -2px #FCFCFC, 78px 23px 0 -3px #FCFCFC;
-  transition: all 0.12s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  @include crater(5px, 2px, 2px);
+
+  box-shadow:
+    42px -7px 0 -3px #FCFCFC,
+    75px -10px 0 -3px #FCFCFC,
+    54px 4px 0 -4px #FCFCFC,
+    83px 7px 0 -2px #FCFCFC,
+    63px 18px 0 -4px #FCFCFC,
+    44px 28px 0 -2px #FCFCFC,
+    78px 23px 0 -3px #FCFCFC;
+
+  transition: all .12s cubic-bezier(0.250, 0.460, 0.450, 0.940);
   transform: scale(0);
 }
 
 .toggle-switch-figureAlt:before {
-  content: "";
-  position: absolute;
-  top: -6px;
-  left: 18px;
-  width: 7px;
-  height: 7px;
-  background-color: #EFEEDA;
-  border-radius: 100%;
-  border: 4px solid #DEE1C5;
+  @include crater(-6px, 18px, 7px);
 }
 
 .toggle-switch-figureAlt:after {
-  content: "";
-  position: absolute;
-  top: 19px;
-  left: 15px;
-  width: 2px;
-  height: 2px;
-  background-color: #EFEEDA;
-  border-radius: 100%;
-  border: 4px solid #DEE1C5;
+  @include crater(19px, 15px, 2px);
 }
 
+
 /*  Night State */
-.toggle-input:checked ~ .toggle-switch {
+
+.toggle-input:checked~.toggle-switch {
   margin-left: 0;
   border-color: #DEE1C5;
   background-color: #FFFDF2;
 }
 
-.toggle-input:checked ~ .toggle-bg {
+.toggle-input:checked~.toggle-bg {
   background-color: #484848;
   border-color: #202020;
 }
 
-.toggle-input:checked ~ .toggle-switch .toggle-switch-figure {
+.toggle-input:checked~.toggle-switch .toggle-switch-figure {
   margin-left: 40px;
   opacity: 0;
   transform: scale(0.1);
 }
 
-.toggle-input:checked ~ .toggle-switch .toggle-switch-figureAlt {
+.toggle-input:checked~.toggle-switch .toggle-switch-figureAlt {
   transform: scale(1);
 }
 
 /* ----------------------------------------------------------------------------------------------------------------------------------- */
+
 #display {
   margin: 0 10px;
   height: 150px;
@@ -245,7 +243,9 @@ button#equal {
   width: 100%;
 }
 
+
 /* ------------------ Light Theme ---------------- */
+
 .calculator {
   background-color: #fff;
 }
@@ -274,7 +274,9 @@ button#equal {
   color: #053d19;
 }
 
+
 /* ------------------------ Dark Theme --------------------- */
+
 .calculator.dark {
   background-color: #0a041f;
 }
@@ -301,4 +303,4 @@ button#equal {
 .calculator.dark button.btn-equal {
   background-color: #0d562d;
   color: #88dfa7;
-}/*# sourceMappingURL=calculator.css.map */
+}
