--- a/calculator.scss
+++ b/calculator.scss
@@ -251,7 +251,7 @@ button#equal {
 }
 
 .calculator #display {
-  color: #f6f7f8;
+  color: #01070d;
 }
 
 .calculator button#clear {
@@ -281,7 +281,7 @@ button#equal {
   background-color: #0a041f;
 }
 
-.calculator.dark#display {
+.calculator.dark #display {
   color: #f8fafd;
 }
 
