--- a/calculator.css
+++ b/calculator.css
@@ -21,7 +21,7 @@ a {
 }
 
 body {
-  background-image: linear-gradient(to bottom right, rgb(18, 6, 62), rgb(168, 83, 192));
+  background-image: linear-gradient(to bottom right, rgb(6, 3, 49), rgb(153, 107, 210));
 }
 
 .container {
@@ -276,29 +276,29 @@ button#equal {
 
 /* ------------------------ Dark Theme --------------------- */
 .calculator.dark {
-  background-color: #0a041f;
+  background-color: #080122;
 }
 
 .calculator.dark #display {
-  color: #f8fafd;
+  color: #ffffff;
 }
 
 .calculator.dark button#clear {
-  background-color: #530c1e;
-  color: #bd3740;
+  background-color: #79122c;
+  color: #ef888f;
 }
 
 .calculator.dark button.btn-number {
-  background-color: #0a4c6b;
+  background-color: #085b81;
   color: #a9d5eb;
 }
 
 .calculator.dark button.btn-operator {
-  background-color: #560c87;
+  background-color: #611594;
   color: #d26ace;
 }
 
 .calculator.dark button.btn-equal {
-  background-color: #0d562d;
-  color: #88dfa7;
-}/*# sourceMappingURL=calculator.css.map */
+  background-color: #0a9144;
+  color: #99ddb0;
+}
